--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,12 +1,12 @@
 .footer {
     height: 100px;
-    /*background: #1c2741;*/
     background: #2f4882;
     box-shadow: 0px -1px 2px #111;
     color: white;
     font-size: 16px;
     margin-top: 15px;
     transition: all 0.2s ease;
+    z-index: 1000;
 }
 
 .footer-content {
