--- a/src/routes/channel-directory-page.css
+++ b/src/routes/channel-directory-page.css
@@ -29,7 +29,8 @@
 .directory--no-results {
 	text-align: center;
 	color: white;
-	padding-top: 20px
+    max-width: 630px;
+    margin: 0 auto;
 }
 
 .directory--no-results .share {
