--- a/src/components/channel-list.css
+++ b/src/components/channel-list.css
@@ -34,15 +34,20 @@
 @media only screen and (max-width: 480px) {
 
     .channel-item {
-        height: 85px;
+        height: 70px;
     }
 
     .channel-item--logo {
-        height: 85px;
+        height: 70px;
+        margin-right: 10px;
     }
 
     .channel-item--logo img {
-        width: 85px;
-        height: 85px;
+        width: 70px;
+        height: 70px;
+    }
+
+    .channel-item--name {
+        font-size: 20px;
     }
 }
