fix create and verify pages; more setup for alert overlay

--- a/src/routes/create-channel-page.css
+++ b/src/routes/create-channel-page.css
@@ -60,7 +60,7 @@
     border: 0;
     color: white;
     font-size: 16px;
-    background: #6440a4;
+    background: #2f4882;
     font-weight: bold;
     text-decoration: none;
 }
