--- a/src/components/header.css
+++ b/src/components/header.css
@@ -21,13 +21,14 @@
 
 .menu {
 	width: 220px;
-	padding: 80px 40px 35px;
+	padding: 70px 40px 45px;
 	cursor: pointer;
 	color: white;
 	display: flex;
 	align-items: center;
 	border-left: 2px solid #455c96;
 	transition: all 0.2s ease;
+	position: relative;
 }
 
 .menu--active,
@@ -65,6 +66,20 @@
     min-width: 0;
     overflow: hidden;
     white-space: nowrap;
+}
+
+.menu--icon {
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 0px;
+    left: 0;
+    text-align: center;
+    padding-bottom: 20px
+}
+
+.menu--icon:after {
+	content: "\2024 \2024 \2024 \2024 \2024";
 }
 
 /* Dropdown */
@@ -106,7 +121,7 @@
 
 .menu-dropdown li a {
     width: 90%;
-    padding: 20px 5%;
+    padding: 15px 5%;
     border-bottom: 1px solid #AAA;
     display: block;
     text-decoration: none;
@@ -129,6 +144,26 @@
 	transition: all 0.2s ease;
 	background-color: inherit;
 	text-align: center;
+}
+
+.menu-dropdown li.discord a {
+	display: flex;
+	align-items: center;
+	padding: 10px 5%;
+	background: #7289da;
+}
+
+.menu-dropdown li.discord a:hover {
+	background: #687cc5;
+}
+
+.menu-dropdown li.discord img {
+	width: 30px;
+}
+
+.menu-dropdown li.discord .discord-text {
+	color: white;
+	margin-left: 5px;
 }
 
 .menu-dropdown li.logout a:hover {
