--- a/src/routes/overlay-panel.css
+++ b/src/routes/overlay-panel.css
@@ -2,8 +2,7 @@
 	background: #00000000;
     width: 100%;
     height: 100%;
-    margin: 10px;
-    bottom: 0;
+    bottom: 10px;
     position: absolute;
 }
 
@@ -23,4 +22,8 @@
 .overlay-container .achievement {
 	width:25%;
 	margin: 0 auto;
+}
+
+.no-background {
+	background: transparent;
 }
