--- a/src/components/achievement.css
+++ b/src/components/achievement.css
@@ -11,7 +11,7 @@
 .achievement {
     background: #555;
     box-shadow: 0px 1px 2px black;
-    width: 96%;
+    width: 95%;
     position: relative;
     height: 2em;
     margin-bottom: 25px;
@@ -20,6 +20,7 @@
     text-shadow: 1px 1px black;
     display: flex;
     align-items: center;
+    margin: 0 auto 25px;
 }
 
 .achievement.achievement--disabled {
