--- a/src/routes/profile-page.css
+++ b/src/routes/profile-page.css
@@ -363,6 +363,23 @@ input:checked + .slider:before {
     font-weight: bold;
 }
 
+.notifications-header {
+	display: flex;
+	align-items: center;
+}
+
+.notifications-header h3 {
+	margin-right: 10px;
+}
+
+.notifications-header button {
+	padding: 8px 10px;
+    border: 0;
+    color: white;
+    background: #425583;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 480px) {
 	h2 {
 		margin-left: 15px;
@@ -430,5 +447,10 @@ input:checked + .slider:before {
 	#profile-page .manage-tabs {
 		overflow-x: scroll;
 		padding-left: 50px;
+	}
+
+	.notifications-header {
+		justify-content: space-between;
+    	margin: 0 10px;
 	}
 }
