--- a/src/components/alert-configuration-panel.css
+++ b/src/components/alert-configuration-panel.css
@@ -142,3 +142,17 @@
     height: 25px;
     margin-left: 0;
 }
+
+@media only screen and (max-width: 480px) {
+  .overlay-url-section {
+    display: none;
+  }
+
+  .alert-overlay .section-value {
+    width: 100%;
+  }
+
+  .section-wrapper.section--inline {
+    flex-direction: row;
+  }
+}
