--- a/src/components/achievement.css
+++ b/src/components/achievement.css
@@ -1,11 +1,11 @@
 .achievement-icon {
-	position: absolute;
+    position: absolute;
     left: -40px;
     top: -45px;
 }
 
 .achievement-icon img {
-	width: 150px;
+    width: 150px;
 }
 
 .achievement {
@@ -40,17 +40,17 @@
 .achievement-logo {
     position: absolute;
     left: -1px;
-    top: auto;
+    top: -10px;
     opacity: 0.5;
 }
 
 .achievement-logo img {
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
 }
 
 .achievement-info {
-	display: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     flex: 1;
@@ -58,23 +58,105 @@
 }
 
 .achievement-title {
-	font-size: 21px;
+    font-size: 21px;
     margin-bottom: 5px;
     margin-top: 0px;
 }
 
 .achievement--icons {
     position: absolute;
-    top: 1em;
-    right: 1em;
+    top: 0;
+    right: 0;
     display: flex;
     align-items: flex-end;
-    flex: 1;
+    flex: 1 1;
+    height: 100%;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.2s ease;
 }
 
-.achievement--icons div {
-    margin-left: 3px;
+.achievement--limited {
+    margin-right: 5px;
+}
+
+.achievement-menu {
+    height: 100%;
+    margin: 0;
     width: 32px;
+    display: flex;
+    transition: all 0.2s ease;
+}
+
+.achievement-menu.visible {
+    width:150px;
+}
+
+.achievement-menu--button {
+    height: 100%;
+    width: 32px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.achievement-menu--button:hover {
+    background: #425583;
+}
+
+.achievement-menu.visible .achievement-menu--button,
+.achievement-menu.visible .achievement-menu--drawer {
+    background: #425583;
+}
+
+.achievement-menu.visible .achievement-menu--button img,
+.achievement-menu.visible .achievement-menu--drawer img {
+    filter: invert(1);
+}
+
+.achievement-menu--button img {
+    width: 24px;
+    filter: invert(0);
+    transition: all 0.2s ease;
+}
+
+.achievement-menu--button:hover img {
+    filter: invert(1);
+}
+
+.achievement-menu--drawer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 118px;
+    justify-content: space-evenly;
+}
+
+.achievement-menu--drawer div {
+    height: 100%;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.achievement-menu--drawer div:hover {
+    background: #425583;
+}
+
+.achievement-menu--drawer div img {
+    filter: invert(0);
+    transition: all 0.2s ease;
+}
+
+.achievement-menu--drawer div:hover img {
+    filter: invert(.95);
+}
+
+.achievement--gift {
     height: 32px;
 }
 
@@ -97,13 +179,13 @@
 }
 
 .achievement-cap {
-	position: absolute;
+    position: absolute;
     right: -20px;
     top: -10px;
 }
 
 .achievement-cap img {
-	width: 55px;
+    width: 55px;
 }
 
 .achievement-blurred {
