--- a/src/routes/dashboard-page.css
+++ b/src/routes/dashboard-page.css
@@ -32,6 +32,7 @@
 
 .default-icons {
 	display: flex;
+	align-items: center;
 }
 
 .default-icons button {
@@ -483,6 +484,10 @@
 	padding-top: 24px;
 }
 
+	.defaultIcon--defaults {
+		display: flex;
+	}
+
 @media only screen and (max-width: 480px) {
 	h2 {
 		margin-left: 15px;
@@ -549,5 +554,57 @@
 
 	.achievement-description {
 		font-size: 15px;
+	    overflow-x: hidden;
+	    text-overflow: ellipsis;
+	    white-space: nowrap;
+	    max-width: 85%;
+	}
+
+	.default-icons {
+		flex-direction: column;
+		margin-left: 0;
+	}
+
+	.divider {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    width: 50px;
+	    margin: 0;
+	    text-align: center;
+	    padding: 15px;
+	}
+
+	.achievementTab .achievementsHeader {
+    	flex-wrap: wrap;
+	}
+
+	.achievementTab .achievementsHeader h3 {
+		width: 100%;
+    	text-align: center;
+	}
+
+	.achievementTab .achievementsHeader .achievement-search {
+		margin: 0;
+	}
+
+	.achievementTab .achievement-logo {
+		width: 65px;
+		height: 65px;
+		top: -5px;
+	}
+
+	.achievementTab .achievement-logo img {
+		width: 65px;
+		height: 65px;
+	}
+
+	.achievementTab .achievement-info {
+		margin-left: 0;
+	}
+
+	.imageGallery .image--wrapper img {
+		width: 110px;
+		height: 110px;
 	}
 }
