--- a/src/routes/channel-page.css
+++ b/src/routes/channel-page.css
@@ -25,12 +25,18 @@
 }
 
 .channel-fav {
-	display: block;
+	display: flex;
 	align-items: center;
     transition: all 0.2s ease;
     width: 35px;
-    margin: 0px 10px;
+    margin-right: 5px;
+    padding: 0px 10px;
     cursor: pointer;
+    height: 100px;
+}
+
+.channel-fav:hover {
+	background: #CCC;
 }
 
 .channel-buttons {
@@ -38,7 +44,6 @@
 }
 
 .condensed .channel-fav {
-	min-height: 70px;
 	transition: all 0.2s ease;
 	width: 5px;
 }
@@ -224,8 +229,10 @@
 		content: "\2024 \2024 \2024 \2024 \2024";
 	    bottom: 3px;
 	    position: absolute;
-	    width: 100%;
-	    text-align: center;
+	    width: 70%;
+    	text-align: center;
+    	margin: 0 15%;
+    	cursor: pointer;
 	}
 
 	.long-description { 
@@ -236,12 +243,15 @@
 		height: 60px;
 	}
 
-	.channel-fav {
+	.channel-fav,
+	.condensed .channel-fav {
 		transition: all 0.2s ease;
 		width: 20px;
+		height: 60px;
 	}
 
-	.channel-fav img {
+	.channel-fav img,
+	.condensed .channel-fav img {
 		width: 20px;
 		transition: all 0.2s ease;
 	}
