favorites retrieved; infinite loading; start of join button animation

--- a/src/components/notification-panel.css
+++ b/src/components/notification-panel.css
@@ -92,4 +92,11 @@
 	.notificationPanel > img {
 		width: 24px;
 	}
+
+	.notificationPanel-badge {
+		padding: 3px 6px;
+		font-size: 10px;
+		right: 12px;
+		top: 12px;
+	}
 }
