--- a/src/components/channel-list.css
+++ b/src/components/channel-list.css
@@ -31,6 +31,14 @@
 	font-size: 18px;
 }
 
+.channel-list h4 {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
 @media only screen and (max-width: 480px) {
 
     .channel-item {
