--- a/src/components/moderator-panel.css
+++ b/src/components/moderator-panel.css
@@ -7,6 +7,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	height: 80px;
 }
 
 .moderator.stripe {
@@ -57,4 +58,30 @@
 .add-moderator-button img {
 	width: 24px;
     margin-right: 5px;
+}
+
+.moderator-delete {
+	height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px 12px;
+    cursor: pointer;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    width: 25px;
+}
+
+.moderator-delete:hover {
+	background: #425583;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.moderator-delete img {
+	width: 25px;
+    flex: 1;
+    height: 25px;
+    margin-left: 0; 
+    display: block;
 }
