--- a/src/routes/verify-page.css
+++ b/src/routes/verify-page.css
@@ -5,6 +5,7 @@
     text-align: center;
     align-items: center;
     padding: 0px 20px;
+
 }
 
 .verify-wrapper p {
@@ -21,4 +22,24 @@
 
 .verify-wrapper .congrats-icon {
 	max-width: 300px;
+}
+
+.verify-wrapper {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.main .section-content .yt-wrapper {
+    max-width: 48%;
+    margin: 0 auto;
+}
+
+.getting-started {
+    width: 100%
+}
+
+@media only screen and (min-width: 768px) {
+    .getting-started {
+        width: 70%;
+    }
 }
