--- a/src/routes/dashboard-page.css
+++ b/src/routes/dashboard-page.css
@@ -497,6 +497,11 @@
 	}
 
 @media only screen and (max-width: 480px) {
+	.manage-container .manage-tabs {
+		overflow-x: scroll;
+    	padding-left: 80px;
+	}
+
 	h2 {
 		margin-left: 15px;
 	}
